# aiops-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/specs/: 2026-06-10-aiops-agent-design.md
docs/superpowers/plans/: 2026-06-10-aiops-agent-phase1.md  2026-06-11-agent-optimization-plan.md  (+3 more)
examples/: 01_simple_chat.py  02_tool_calling.py  03_memory.py  04_react.py  05_langgraph.py  06_rag.py  07_skills.py  _common.py  _ui.py
examples/knowledge_base/: 01_服务器命名规范.md  02_告警分级与处理流程.md  03_端口与中间件配置.md
knowledge_base/: 04_日志收集与备份策略.md
src/: pyproject.toml
src/aiops_agent/: __init__.py  __main__.py  cli.py  config.py
src/aiops_agent/agents/: __init__.py  planner.py  worker.py
src/aiops_agent/core/: __init__.py  agent.py  chat_responder.py  intent_router.py  tui_app.py
src/aiops_agent/graph/: __init__.py  _utils.py  complex.py  entry.py  state.py
src/aiops_agent/llm/: __init__.py  base.py  factory.py  openai_compatible.py
src/aiops_agent/memory/: __init__.py  base.py  core.py  episodic.py  summarizing.py  tiered.py  window.py  working.py
src/aiops_agent/tools/: __init__.py  base.py  file_tools.py  knowledge_tool.py  notepad_tool.py  registry.py  shell.py  todo_tool.py
tests/: conftest.py  test_agents.py  test_cli_helpers.py  test_config.py  test_core_memory.py  test_e2e_todo_flow.py  test_episodic_memory.py  test_file_tools.py  test_knowledge_tool.py  test_llm_converter.py  test_notepad_tool.py  test_openai_compatible_llm.py  test_shell_tools.py  test_tiered_memory.py  test_todo_tool.py  test_working_memory.py
(+8 files in other folders)
