[project]
name = "aiops-agent"
version = "0.1.0"
description = "AIOps Agent — 运维智能助手"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.4.0",
]

[project.scripts]
aiops-agent = "aiops_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
